# note-app

./: README.md
backend/authentication/: Cargo.toml
backend/authentication/src/: db.rs  main.rs  response.rs
backend/authentication/src/db/: users.rs
backend/authentication/src/models/: users.rs
backend/authentication/src/routes/: login.rs
backend/notes/: README.md  go.mod  main.go
backend/notes/controller/: labels.go  notes.go  users.go
backend/notes/database/: setup.go
backend/notes/models/: labels.go  notes.go  users.go
backend/signup/: package-lock.json  package.json  server.js
