[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
jwt = "0.16.0"
bcrypt = "0.13.0"
hmac = "0.12.1"
sha2 = "0.10.6"
#dotenv = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]